remove new Long and new Integer from tests